--- a/05-AWS/01-Node-temp-1/serverless.yml
+++ b/05-AWS/01-Node-temp-1/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: aws-nodejs # NOTE: update this with your service name
+service: edxael-service # NOTE: update this with your service name
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
@@ -22,8 +22,8 @@ provider:
   runtime: nodejs6.10
 
 # you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
+  stage: dev
+  region: us-west-1
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
@@ -47,8 +47,11 @@ provider:
 
 # you can add packaging information here
 #package:
-#  include:
-#    - include-me.js
+
+
+include:
+   - utils/**
+  #  - include-me.js
 #    - include-me-dir/**
 #  exclude:
 #    - exclude-me.js
