--- a/02-REACT/02-stripe-1/package.json
+++ b/02-REACT/02-stripe-1/package.json
@@ -6,6 +6,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "react-script-loader": "0.0.1",
     "react-scripts": "1.1.1"
   },
   "scripts": {
