--- a/02-REACT/02-stripe-1-MN/package.json
+++ b/02-REACT/02-stripe-1-MN/package.json
@@ -7,7 +7,9 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-script-loader": "0.0.1",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^5.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
