--- a/04-API/06-Stripe-App/01-Stripe-Node-BE/package.json
+++ b/04-API/06-Stripe-App/01-Stripe-Node-BE/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "mongoose": "^5.0.12",
     "stripe": "^5.6.1"
   }
 }
